--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -7,14 +10,17 @@
     "lint": "next lint",
     "prebuild": "prisma generate",
     "predev": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:push": "prisma db push",
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:seed": "prisma db seed"
   },
   "dependencies": {
-    "@next/font": "^13.0.5",
     "@prisma/client": "^4.6.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
+    "@uppy/core": "^3.1.1",
     "bcrypt": "^5.1.0",
+    "hasha": "^5.2.2",
     "next": "^13.0.5",
     "next-auth": "^4.17.0",
     "react": "^18.2.0",
@@ -22,6 +28,7 @@
     "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
@@ -29,6 +36,7 @@
     "postcss": "^8.4.12",
     "prisma": "^4.6.1",
     "tailwindcss": "^3.0.23",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.2"
   }
 }
