--- a/package.json
+++ b/package.json
@@ -12,30 +12,44 @@
     "predev": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:migrate": "prisma migrate deploy",
-    "prisma:seed": "prisma db seed"
+    "prisma:seed": "prisma db seed",
+    "prisma:format": "prisma format"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.1",
+    "@chakra-ui/react": "^2.5.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@prisma/client": "^4.6.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@uppy/core": "^3.1.1",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "exif-parser": "^0.1.12",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.9.2",
     "hasha": "^5.2.2",
     "next": "^13.0.5",
-    "next-auth": "^4.17.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-postmark-transport": "^5.2.1",
+    "postmark": "^3.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0"
+    "sharp": "^0.32.0",
+    "slugify": "^1.6.5",
+    "swr": "^2.1.1",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.7",
     "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "^13.0.5",
     "postcss": "^8.4.12",
     "prisma": "^4.6.1",
-    "tailwindcss": "^3.0.23",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.2"
   }
