--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sharp": "^0.32.0",
     "slugify": "^1.6.5",
     "swr": "^2.1.1",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
